--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nestquestserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.5",
     "validator": "^13.11.0"
   }
 }
